force-app/main/default/objects/Seat_Information__c/Seat_Information__c.object-meta.xml
<CustomObject>
    <label>Seat Information</label>
    <nameField>
        <label>Seat Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seat Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>