force-app/main/default/objects/Seat_Information__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <formula>MID(
    Name , 
    FIND(&quot;_&quot;, Name) + 1, 
    FIND(&quot;_&quot;, RIGHT(Name, LEN(Name) - FIND(&quot;_&quot;, Name)-1))
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Name</label>
    <type>Text</type>
</CustomField>