force-app/main/default/objects/Seat_Information__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>MID(Name,0,FIND(&apos;_&apos;, Name)-1)</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>