force-app/main/default/objects/Seat_Information__c/fields/Last_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Booked_Date__c</fullName>
    <description>Last Date the seat was booked</description>
    <inlineHelpText>Last Date the seat was booked</inlineHelpText>
    <label>Last Booked Date</label>
    <type>DateTime</type>
</CustomField>