force-app/main/default/objects/Seat_Information__c/fields/Seat_Occupancy_Percent__c.field-meta.xml
<CustomField>
    <fullName>Seat_Occupancy_Percent__c</fullName>
    <formula>((Total_Times_Occupied__c) / Total_Times_Booked__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seat Occupancy Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>