force-app/main/default/objects/Seat_Information__c/fields/Seat_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Seat_Speciality__c</fullName>
    <defaultValue>&quot;Normal&quot;</defaultValue>
    <label>Seat Speciality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Widow</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>