force-app/main/default/objects/Seat_Information__c/fields/Total_Times_Booked__c.field-meta.xml
<CustomField>
    <fullName>Total_Times_Booked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total no of times a seat was booked</description>
    <label>Total Times Booked</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>