force-app/main/default/objects/Seat_Information__c/fields/Total_Times_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Total_Times_Occupied__c</fullName>
    <description>Total No of times a seat was booked &amp; occupied</description>
    <inlineHelpText>Total No of times a seat was booked &amp; occupied</inlineHelpText>
    <label>Total Times Occupied</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>